--- a/style.css
+++ b/style.css
@@ -9665,7 +9665,7 @@ body:not(.device-touch) .clients-grid li a {
 	text-shadow: 1px 1px 1px #FFF;
 }
 
-.testi-image img { border-radius: 50%; }
+/* .testi-image img { border-radius: 50%; } */
 
 .testi-content {
 	position: relative;
@@ -9733,8 +9733,8 @@ body:not(.device-touch) .clients-grid li a {
 .testimonial-full .testi-image img,
 .testimonial-full .testi-image i {
 	display: block;
-	width: 72px;
-	height: 72px;
+	width: 100px;
+	height: 144px;
 }
 
 .testimonial-full .testi-image i { line-height: 72px; }
