--- a/demos/writer/writer.css
+++ b/demos/writer/writer.css
@@ -230,8 +230,14 @@
 
 .portfolio.portfolio-3 { margin: 0 -40px -40px -20px; }
 
-.portfolio-3 .portfolio-item { padding: 0 40px 40px 20px; }
+.portfolio-3 .portfolio-item { padding: 0 40px 10px 20px; }
 
+.portfolio-item.mb-3.mb-sm-0 {
+	display: flex;
+}
+.book-wrap .book-card {
+	align-content: space-between;
+}
 
 /* testimonial */
 .testimonial-full.writer-feedback { overflow: visible; }
