--- a/style.css
+++ b/style.css
@@ -11305,7 +11305,7 @@ input[type=checkbox]:not(:checked) + label.error { display: block !important; }
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	color: #333;
+	color: #258e4c;
 }
 
 .emphasis-title h1,
