--- a/demos/writer/writer.css
+++ b/demos/writer/writer.css
@@ -232,12 +232,12 @@
 
 .portfolio-3 .portfolio-item { padding: 0 40px 10px 20px; }
 
-.portfolio-item.mb-3.mb-sm-0 {
+/* .portfolio-item.mb-3.mb-sm-0 {
 	display: flex;
 }
 .book-wrap .book-card {
 	align-content: space-between;
-}
+} */
 
 /* testimonial */
 .testimonial-full.writer-feedback { overflow: visible; }
