--- a/style.css
+++ b/style.css
@@ -178,11 +178,11 @@ a img { border: none; }
 
 img { max-width: 100%;}
 
-/* .book-card img {
+.book-card img {
 	width: 100%;
-	height: 450px;
+	height: 400px;
 	object-fit: cover;
-} */
+}
 
 iframe { border: none !important; }
 
