--- a/style.css
+++ b/style.css
@@ -615,8 +615,8 @@ span.middot {
 
 .col_full { width: 100%; }
 .col_half,
-.postcontent.bothsidebar { width: 48%; }
-.col_one_third { width: 30.63%; }
+/* .postcontent.bothsidebar { width: 48%; } */
+/* .col_one_third { width: 30.63%; } */
 .col_two_third { width: 65.33%; }
 .col_one_fourth,
 .sidebar { width: 22%; }
