略歴画像まわりをぼかす　略歴の文字色white

--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ iframe { border: none !important; }
 
 img.cat {
 		border-radius: 600px;
+		box-shadow:0 0 10px 12px rgba(194,194,194,0.8);
 }
 /* ----------------------------------------------------------------
 	Basic Layout Styles
